<resources>
    <string name="app_name">Weather Guide</string>
    <string name="splashscreen">splashscreen</string>
    <string name="todo">ToDo</string>
    <string name="notAvailable">Not Available</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weather_guide">Weather Guide</string>
    <string name="search_by_pincode">Search By Pincode</string>
    <string name="search_by_city">Search By City</string>
    <string name="city_name">City Name</string>
    <string name="search">Search</string>
    <string name="_0_xb0_c">0°C</string>
    <string name="_0_xb0_f">0°F</string>
    <string name="location">location</string>
    <string name="weather_description">Weather Description</string>
    <string name="_0_m_s">0 m/s</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="na">NA</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="air_pressure">Air pressure</string>
    <string name="_0_xb0">0°</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="air_quality">Air Quality</string>
    <string name="percent_0">0 %</string>
    <string name="humidity">Humidity</string>
    <string name="_0_km">0 Km</string>
    <string name="visibility">Visibility</string>
    <string name="clouds">Clouds</string>
    <string name="_0_mb">0 mb</string>
    <string name="sea_level">Sea Level</string>
    <string name="dew">Dew</string>
    <string name="_0">0</string>
    <string name="uv_rays">UV rays</string>
    <string name="_00_00">00:00</string>
    <string name="sun">Sun</string>
    <string name="_0_mm_hr">0 mm/hr</string>
    <string name="snow">Snow</string>
    <string name="heat">Heat</string>
    <string name="enter_mobile_number">Enter Mobile Number*</string>
    <string name="enter_full_name">Enter Full Name*</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number_to_use_the_application">Enter your mobile number to use the application</string>
    <string name="continue_to_register">Continue to register</string>
    <string name="fields_compulsory">* Fields Compulsory</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="pincode">PinCode*</string>
    <string name="check">Check</string>
    <string name="save_details">Save Details</string>
    <string name="full_name">Full Name*</string>
    <string name="gender">Gender*</string>
    <string name="date_of_birth">Date of birth*</string>
    <string name="age">Age :</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="district">District:</string>
    <string name="state">State:</string>
    <string name="edit_details">Edit Details</string>
    <string name="min_3_character_max_50_character">min 3 character, max 50 character</string>
    <string name="max_50_character">max 50 character</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
</resources>